--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/portfolio/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#skills">Skills</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="form.html">Contact us</a>
+                <a class="nav-link" href="/portfolio/form">Contact us</a>
               </li>
             </ul>
           </div>
